# BrainMinderBack

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 02b2f7a1bf6e_create_schema.py  5c20420a85c8_create_tables.py  7e654e9b6e36_create_triggers.py  a73ee53acd3a_create_extensions_and_functions.py
app/: dependencies.py  main.py
app/config/: constants.py
app/core/base/operation/: base.py  types.py
app/core/operations/: divide.py
app/db/: config.py  connection.py  unitOfWork.py  utils.py
app/db/repositories/: base.py  divideRepo.py
app/models/brainMinder/: domainClasses.py
app/models/operations/: divide.py
app/routers/: demo_route.py  operation_routers.py
app/schemas/: divide.py
app/services/: operation_service.py
app/utils/: logger.py
